Boards: fix spacing

--- a/src/js/components/resultsBoardNamed/resultsBoard.less
+++ b/src/js/components/resultsBoardNamed/resultsBoard.less
@@ -11,13 +11,14 @@
   justify-content: space-between;
   margin-bottom: 30px;
 
-  @media @mobile {
-    display: block;
-  }
+  // @media @mobile {
+  //   display: block;
+  // }
 }
 
 .board-wrapper {
   flex: 0 0 32%;
+  max-width: 100%;
 
   &.first {
     order: 1;
